# ChangeLog for net-firewall/shorewall-lite
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-lite/ChangeLog,v 1.100 2012/06/26 04:37:40 zmedico Exp $

  26 Jun 2012; Zac Medico <zmedico@gentoo.org> shorewall-lite-4.4.23.2.ebuild,
  shorewall-lite-4.4.27-r1.ebuild, shorewall-lite-4.4.27.ebuild:
  inherit eutils for epatch

*shorewall-lite-4.5.4.2 (08 Jun 2012)

  08 Jun 2012; Constanze Hausner <constanze@gentoo.org>
  +shorewall-lite-4.5.4.2.ebuild, +files/shorewallrc:
  Version bump with new config file

  20 May 2012; Mark Loeser <halcy0n@gentoo.org> shorewall-lite-4.4.23.2.ebuild:
  Stable for ppc/ppc64; bug #388195

  17 Mar 2012; Raúl Porcel <armin76@gentoo.org>
  shorewall-lite-4.4.23.2.ebuild:
  sparc stable wrt #388195

*shorewall-lite-4.4.27-r1 (27 Feb 2012)

  27 Feb 2012; Constanze Hausner <constanze@gentoo.org>
  -shorewall-lite-4.4.22.1.ebuild, -shorewall-lite-4.4.22.3.ebuild,
  -shorewall-lite-4.4.24.1.ebuild, +shorewall-lite-4.4.27-r1.ebuild:
  Cleaned up old versions and added anti-dep for shorewall-core to unstable
  versions < 4.5

*shorewall-lite-4.5.0.1 (24 Feb 2012)

  24 Feb 2012; Constanze Hausner <constanze@gentoo.org>
  +shorewall-lite-4.5.0.1.ebuild, files/shorewall-lite:
  Version Bump

  23 Jan 2012; Tobias Klausmann <klausman@gentoo.org>
  shorewall-lite-4.4.23.2.ebuild:
  Stable on alpha, bug #388195

*shorewall-lite-4.4.27 (03 Jan 2012)

  03 Jan 2012; Constanze Hausner <constanze@gentoo.org>
  +shorewall-lite-4.4.27.ebuild:
  Version bump

  13 Nov 2011; Markus Meier <maekke@gentoo.org> shorewall-lite-4.4.23.2.ebuild:
  x86 stable, bug #388195

  01 Nov 2011; Jeroen Roovers <jer@gentoo.org> shorewall-lite-4.4.23.2.ebuild:
  Stable for HPPA (bug #388195).

  27 Oct 2011; Tony Vroon <chainsaw@gentoo.org> shorewall-lite-4.4.23.2.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in bug #388195.
