@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/shorewall-lite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-lite/ChangeLog,v 1.100 2012/06/26 04:37:40 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-lite/ChangeLog,v 1.101 2012/08/15 17:52:00 constanze Exp $
+
+*shorewall-lite-4.5.6.2 (15 Aug 2012)
+
+  15 Aug 2012; Constanze Hausner <constanze@gentoo.org>
+  +shorewall-lite-4.5.6.2.ebuild:
+  Version Bump
 
   26 Jun 2012; Zac Medico <zmedico@gentoo.org> shorewall-lite-4.4.23.2.ebuild,
   shorewall-lite-4.4.27-r1.ebuild, shorewall-lite-4.4.27.ebuild:
